--- a/py_playground/backtrace/nqueen.ipynb
+++ b/py_playground/backtrace/nqueen.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": "[['.Q..', '...Q', 'Q...', '..Q.'], ['..Q.', 'Q...', '...Q', '.Q..']]"
+      "text/plain": [
+       "[['.Q..', '...Q', 'Q...', '..Q.'], ['..Q.', 'Q...', '...Q', '.Q..']]"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 1
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -23,15 +25,8 @@
     "    maze = []\n",
     "    ans = []\n",
     "\n",
-    "    def _init_(self):\n",
-    "        for i in range(0,self.N):\n",
-    "            t = []\n",
-    "            for j in range(0,self.N):\n",
-    "                t.append(\".\")\n",
-    "            self.maze.append(t)\n",
-    "\n",
     "    def run(self):\n",
-    "        self._init_()\n",
+    "        self.maze = [[\".\" for i in range(0,self.N)] for j in range(0, self.N)]\n",
     "        self.trail(0)\n",
     "        return self.ans\n",
     "    \n",
@@ -81,7 +76,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5-final"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
