--- a/py_playground/machine-learning/nlp_sentimental_analysis/amazon_sentimental_analysis.ipynb
+++ b/py_playground/machine-learning/nlp_sentimental_analysis/amazon_sentimental_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -57,7 +57,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewText</th>\n      <th>Positive</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>This is a one of the best apps acording to a b...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>This is a pretty good version of the game for ...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>this is a really cool game. there are a bunch ...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>This is a silly game and can be frustrating, b...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>This is a terrific game on any pad. Hrs of fun...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>This is a very entertaining game!  You don't h...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>this is awesome and you don't need wi ti to pl...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>this is awesome I bet no one even reads the re...</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>This is basicly the free version but with ads....</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>this is by far the best free app that is avail...</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 2
     }
    ],
    "source": [
@@ -485,17 +485,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "('../datasets/amazon.csv.train', '../datasets/amazon.csv.valid')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -524,39 +516,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(4999, 0.8851770354070814, 0.8851770354070814)"
+       "(2999, 0.8782927642547516, 0.8782927642547516)"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 7
     }
    ],
    "source": [
-    "model = fasttext.train_supervised(input=amazon_train,epoch=10,lr=0.9,wordNgrams=2)\n",
+    "model = fasttext.train_supervised(input=amazon_train,epoch=10,lr=1.0,wordNgrams=2,dim=100,loss='hs')\n",
     "model.test(amazon_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(('__label__0',), array([0.99976033]))"
+       "(('__label__0',), array([1.00000584]))"
       ]
      },
      "metadata": {},
-     "execution_count": 26
+     "execution_count": 8
     }
    ],
    "source": [
