--- a/py_playground/simulation/red_pack.ipynb
+++ b/py_playground/simulation/red_pack.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "6d05c2d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[18.13, 15.46, 28.4, 24.7, 13.31]\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "from typing import List\n",
@@ -38,21 +49,14 @@
     "    return False\n",
     "\n",
     "print(gen_red_package(100, 5, 10, 90))"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[18.13, 15.46, 28.4, 24.7, 13.31]\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "074c7405",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "我们将100块钱分成5个红包， 最小5元，最大95元（这个允许的金额区间越大，算法性能越好，范围越小，越消耗性能）\n",
@@ -80,29 +84,15 @@
     "            base = pos[idx] + n\n",
     "        pos[idx] = base\n",
     "        idx += 1      "
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "source": [
-    "import plotly.graph_objects as go\n",
-    "\n",
-    "x_array = list(stat.keys())\n",
-    "x_array.sort()\n",
-    "y_array = [stat[i] for i in x_array]\n",
-    "\n",
-    "fig = go.Figure(\n",
-    "    data=[go.Bar(x=x_array, y=y_array)],\n",
-    "    layout_title_text=\"A Figure Displayed with fig\"\n",
-    ")\n",
-    "fig.show()"
-   ],
+   "id": "1542e982",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -1035,26 +1025,31 @@
        }
       }
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "x_array = list(stat.keys())\n",
+    "x_array.sort()\n",
+    "y_array = [stat[i] for i in x_array]\n",
+    "\n",
+    "fig = go.Figure(\n",
+    "    data=[go.Bar(x=x_array, y=y_array)],\n",
+    "    layout_title_text=\"A Figure Displayed with fig\"\n",
+    ")\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "source": [
-    "x_array = list(pos.keys())\n",
-    "y_array = list(pos.values())\n",
-    "fig = go.Figure(\n",
-    "    data=[go.Bar(x=x_array, y=y_array)],\n",
-    "    layout_title_text=\"A 2\"\n",
-    ")\n",
-    "fig.show()"
-   ],
+   "id": "9cb01bde",
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -1903,17 +1898,27 @@
        }
       }
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "metadata": {}
+   "source": [
+    "x_array = list(pos.keys())\n",
+    "y_array = list(pos.values())\n",
+    "fig = go.Figure(\n",
+    "    data=[go.Bar(x=x_array, y=y_array)],\n",
+    "    layout_title_text=\"A 2\"\n",
+    ")\n",
+    "fig.show()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "id": "c800cf8c",
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   }
  ],
  "metadata": {
@@ -1921,8 +1926,8 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.9 64-bit"
+   "display_name": "Python 3.8.9 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
