--- a/py_playground/visualization/pl_scatter.ipynb
+++ b/py_playground/visualization/pl_scatter.ipynb
@@ -17,8 +17,84 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>p</th>\n",
+       "      <th>m</th>\n",
+       "      <th>u</th>\n",
+       "      <th>color</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>rust</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>#1f77b4</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cpp</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>#ff7f0e</td>\n",
+       "      <td>450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>java</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>#2ca02c</td>\n",
+       "      <td>900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>scala</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>#d62728</td>\n",
+       "      <td>500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>go</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>#9467bd</td>\n",
+       "      <td>1600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
        "    name  p  m  u    color  score\n",
        "0   rust  5  5  2  #1f77b4   1000\n",
@@ -26,11 +102,11 @@
        "2   java  4  2  3  #2ca02c    900\n",
        "3  scala  4  1  2  #d62728    500\n",
        "4     go  4  4  4  #9467bd   1600"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>p</th>\n      <th>m</th>\n      <th>u</th>\n      <th>color</th>\n      <th>score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>rust</td>\n      <td>5</td>\n      <td>5</td>\n      <td>2</td>\n      <td>#1f77b4</td>\n      <td>1000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>cpp</td>\n      <td>5</td>\n      <td>4</td>\n      <td>1</td>\n      <td>#ff7f0e</td>\n      <td>450</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>java</td>\n      <td>4</td>\n      <td>2</td>\n      <td>3</td>\n      <td>#2ca02c</td>\n      <td>900</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>scala</td>\n      <td>4</td>\n      <td>1</td>\n      <td>2</td>\n      <td>#d62728</td>\n      <td>500</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>go</td>\n      <td>4</td>\n      <td>4</td>\n      <td>4</td>\n      <td>#9467bd</td>\n      <td>1600</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      ]
      },
+     "execution_count": 2,
      "metadata": {},
-     "execution_count": 2
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -54,7 +130,6 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -261,6 +336,11 @@
              "line": {
               "color": "#E5ECF6",
               "width": 0.5
+             },
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "bar"
@@ -272,6 +352,11 @@
              "line": {
               "color": "#E5ECF6",
               "width": 0.5
+             },
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "barpolar"
@@ -470,9 +555,10 @@
           "histogram": [
            {
             "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "histogram"
@@ -1076,7 +1162,8 @@
        }
       }
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1099,11 +1186,11 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3.8.9 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1115,7 +1202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.7"
   },
   "metadata": {
    "interpreter": {
