--- a/py_playground/machine-learning/nlp_sentimental_analysis/amazon_sentimental_analysis.ipynb
+++ b/py_playground/machine-learning/nlp_sentimental_analysis/amazon_sentimental_analysis.ipynb
@@ -16,19 +16,17 @@
    "source": [
     "# Fasttext classification \n",
     "\n",
-    "1. 格式转换工具将普通的csv训练数据文件变为共fasttext使用的训练数据"
+    "1. 格式转换工具将普通的csv训练数据文件变为供fasttext使用的训练数据"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
     "import fasttext\n",
-    "import random\n",
     "\n",
     "amazon_source = \"../../datasets/amazon.csv\"\n",
     "\n",
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +60,7 @@
       "Read 0M words\n",
       "Number of words:  30628\n",
       "Number of labels: 2\n",
-      "Progress: 100.0% words/sec/thread:  964496 lr:  0.000000 avg.loss:  0.111169 ETA:   0h 0m 0s\n"
+      "Progress: 100.0% words/sec/thread: 2425666 lr:  0.000000 avg.loss:  0.013001 ETA:   0h 0m 0s\n"
      ]
     },
     {
@@ -71,28 +69,28 @@
        "(7999, 0.5, 1.0)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = fasttext.train_supervised(input=amazon_train,epoch=5,lr=0.8,wordNgrams=2,dim=128,loss='hs')\n",
+    "model = fasttext.train_supervised(input=amazon_train,epoch=50,lr=0.8,wordNgrams=2,dim=100,loss='hs')\n",
     "model.test(amazon_test,k=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(('__label__0', '__label__1'), array([0.9835794 , 0.01644061]))"
+       "(('__label__0', '__label__1'), array([9.99923825e-01, 9.61717960e-05]))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,30 +98,15 @@
    "source": [
     "model.predict(\"got this kindle fire for Christmas. trying to download free angry birds and it is not working. started to down load over 2 hours ago. an it is only at 2 percent still. piece of crap:(\",k=-1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
-   "language": "python",
-   "name": "python389jvsc74a57bd031f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "display_name": "Python 3.9.7 64-bit",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -135,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
