--- a/py_playground/machine-learning/pycaret-proj/pycaret-classification-demo.ipynb
+++ b/py_playground/machine-learning/pycaret-proj/pycaret-classification-demo.ipynb
@@ -4079,7 +4079,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4093,7 +4093,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.9"
   }
  },
  "nbformat": 4,
