--- a/py_playground/machine-learning/pycaret-proj/pycaret_zucai.ipynb
+++ b/py_playground/machine-learning/pycaret-proj/pycaret_zucai.ipynb
@@ -1912,7 +1912,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1926,7 +1926,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.4"
+   "version": "3.8.9"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
