--- a/py_playground/machine-learning/sklean-demos/random-forest.ipynb
+++ b/py_playground/machine-learning/sklean-demos/random-forest.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,6 +47,8 @@
        " 'ExtraTreesRegressor',\n",
        " 'GradientBoostingClassifier',\n",
        " 'GradientBoostingRegressor',\n",
+       " 'HistGradientBoostingClassifier',\n",
+       " 'HistGradientBoostingRegressor',\n",
        " 'IsolationForest',\n",
        " 'RandomForestClassifier',\n",
        " 'RandomForestRegressor',\n",
@@ -71,14 +73,14 @@
        " '_gb',\n",
        " '_gb_losses',\n",
        " '_gradient_boosting',\n",
+       " '_hist_gradient_boosting',\n",
        " '_iforest',\n",
        " '_stacking',\n",
        " '_voting',\n",
-       " '_weight_boosting',\n",
-       " 'typing']"
+       " '_weight_boosting']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +113,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.7"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
