--- a/py_playground/machine-learning/torch_nlp/chapter_02.ipynb
+++ b/py_playground/machine-learning/torch_nlp/chapter_02.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "application/vnd.plotly.v1+json": {
        "config": {
@@ -19,6 +18,9 @@
          "line": {
           "color": "#636efa",
           "dash": "solid"
+         },
+         "marker": {
+          "symbol": "circle"
          },
          "mode": "lines",
          "name": "",
@@ -254,6 +256,11 @@
              "line": {
               "color": "#E5ECF6",
               "width": 0.5
+             },
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "bar"
@@ -265,6 +272,11 @@
              "line": {
               "color": "#E5ECF6",
               "width": 0.5
+             },
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "barpolar"
@@ -463,9 +475,10 @@
           "histogram": [
            {
             "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
+             "pattern": {
+              "fillmode": "overlay",
+              "size": 10,
+              "solidity": 0.2
              }
             },
             "type": "histogram"
@@ -1069,7 +1082,8 @@
        }
       }
      },
-     "metadata": {}
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1100,14 +1114,38 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/23/wv3l9j5n5w50wcwph10cdks00000gn/T/ipykernel_54915/1834824045.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \"\"\"\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTfidfTransformer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTfidfVectorizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bag of words（BOW） 词袋模型\n",
+      "[[0 1 1 1 0 0 1 0 1]\n",
+      " [0 1 0 1 0 2 1 0 1]\n",
+      " [1 0 0 0 1 0 1 1 0]\n",
+      " [0 1 1 1 0 0 1 0 1]]\n",
+      "\n",
+      " ------------------------------ \n",
+      "\n",
+      "TF-IDF 模型\n",
+      "[[0.         0.43877674 0.54197657 0.43877674 0.         0.\n",
+      "  0.35872874 0.         0.43877674]\n",
+      " [0.         0.27230147 0.         0.27230147 0.         0.85322574\n",
+      "  0.22262429 0.         0.27230147]\n",
+      " [0.55280532 0.         0.         0.         0.55280532 0.\n",
+      "  0.28847675 0.55280532 0.        ]\n",
+      " [0.         0.43877674 0.54197657 0.43877674 0.         0.\n",
+      "  0.35872874 0.         0.43877674]]\n",
+      "\n",
+      " ------------------------------ \n",
+      "\n",
+      "TF-IDF 模型\n",
+      "[[0.         0.43877674 0.54197657 0.43877674 0.         0.\n",
+      "  0.35872874 0.         0.43877674]\n",
+      " [0.         0.27230147 0.         0.27230147 0.         0.85322574\n",
+      "  0.22262429 0.         0.27230147]\n",
+      " [0.55280532 0.         0.         0.         0.55280532 0.\n",
+      "  0.28847675 0.55280532 0.        ]\n",
+      " [0.         0.43877674 0.54197657 0.43877674 0.         0.\n",
+      "  0.35872874 0.         0.43877674]]\n"
      ]
     }
    ],
@@ -1179,18 +1217,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/23/wv3l9j5n5w50wcwph10cdks00000gn/T/ipykernel_54915/3646246567.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \"\"\"\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# 语料\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "打印所有的特征名称\n",
+      "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']\n",
+      "打印整个文本矩阵\n",
+      "[[0 1 1 1 0 0 1 0 1]\n",
+      " [0 1 0 1 0 2 1 0 1]\n",
+      " [1 0 0 0 1 0 1 1 0]\n",
+      " [0 1 1 1 0 0 1 0 1]]\n",
+      "打印所有的列相加\n",
+      "[1 3 2 3 1 2 4 1 3]\n",
+      "打印所有的行相加\n",
+      "[5 6 4 5]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.9/site-packages/sklearn/utils/deprecation.py:87: FutureWarning:\n",
+      "\n",
+      "Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "\n"
      ]
     }
    ],
@@ -1236,10 +1290,20 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "打印词汇表: \n {'me': 0, 'gusta': 1, 'comer': 2, 'en': 3, 'la': 4, 'cafeteria': 5, 'Give': 6, 'it': 7, 'to': 8, 'No': 9, 'creo': 10, 'que': 11, 'sea': 12, 'una': 13, 'buena': 14, 'idea': 15, 'is': 16, 'not': 17, 'a': 18, 'good': 19, 'get': 20, 'lost': 21, 'at': 22, 'Yo': 23, 'si': 24, 'on': 25}\nbow_vector: \n tensor([[1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n         0., 0., 0., 0., 0., 0., 0., 0.]])\ntensor([[-0.8195, -0.5810]], grad_fn=<LogSoftmaxBackward>)\n训练后 ---: \n tensor([[-0.1210, -2.1721]], grad_fn=<LogSoftmaxBackward>)\n训练后 ---: \n tensor([[-2.7767, -0.0643]], grad_fn=<LogSoftmaxBackward>)\ntensor([ 0.5004, -0.2738], grad_fn=<SelectBackward>)\n"
+      "打印词汇表: \n",
+      " {'me': 0, 'gusta': 1, 'comer': 2, 'en': 3, 'la': 4, 'cafeteria': 5, 'Give': 6, 'it': 7, 'to': 8, 'No': 9, 'creo': 10, 'que': 11, 'sea': 12, 'una': 13, 'buena': 14, 'idea': 15, 'is': 16, 'not': 17, 'a': 18, 'good': 19, 'get': 20, 'lost': 21, 'at': 22, 'Yo': 23, 'si': 24, 'on': 25}\n",
+      "bow_vector: \n",
+      " tensor([[1., 1., 1., 1., 1., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+      "         0., 0., 0., 0., 0., 0., 0., 0.]])\n",
+      "tensor([[-0.8195, -0.5810]], grad_fn=<LogSoftmaxBackward>)\n",
+      "训练后 ---: \n",
+      " tensor([[-0.1210, -2.1721]], grad_fn=<LogSoftmaxBackward>)\n",
+      "训练后 ---: \n",
+      " tensor([[-2.7767, -0.0643]], grad_fn=<LogSoftmaxBackward>)\n",
+      "tensor([ 0.5004, -0.2738], grad_fn=<SelectBackward>)\n"
      ]
     }
    ],
@@ -1407,9 +1471,13 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1421,10 +1489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  },
-  "interpreter": {
-   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   "version": "3.9.8"
   }
  },
  "nbformat": 4,
