--- a/py_playground/simulation/simulate.ipynb
+++ b/py_playground/simulation/simulate.ipynb
@@ -208,11 +208,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.9.7 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -225,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
