--- a/ml/simple-demo/lightgbm.ipynb
+++ b/ml/simple-demo/lightgbm.ipynb
@@ -175,8 +175,7 @@
     "gbm.fit(X_train, y_train)\n",
     "print('Best parameters found by grid search are:', gbm.best_params_)\n",
     "\n",
-    "print(\"Model Score %s\" % gbm.score(X_test,y_test))\n",
-    "\n"
+    "print(\"Model Score %s\" % gbm.score(X_test,y_test))\n"
    ]
   }
  ],
