--- a/ml/simple-demo/simple_nn.ipynb
+++ b/ml/simple-demo/simple_nn.ipynb
@@ -80560,11 +80560,10 @@
           ],
           "scatter": [
            {
-            "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
-             }
+            "fillpattern": {
+             "fillmode": "overlay",
+             "size": 10,
+             "solidity": 0.2
             },
             "type": "scatter"
            }
@@ -81068,7 +81067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
