--- a/py_playground/simulation/simulate.ipynb
+++ b/py_playground/simulation/simulate.ipynb
@@ -48,9 +48,7 @@
     "\n",
     "# a,b总钱数\n",
     "a,b = 1000,1000\n",
-    "\n",
-    "rate = 0.36666666666666664\n",
-    "idx = 0\n",
+    "rate, = 0.36666666666666664,0\n",
     "\n",
     "def a_rand():\n",
     "    return random.random()\n",
@@ -230,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
