--- a/py_playground/algorithm/backtrace/24_game.ipynb
+++ b/py_playground/algorithm/backtrace/24_game.ipynb
@@ -2,16 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from typing import List\n",
+    "\n",
+    "\n",
     "class Solution:\n",
     "    def judgePoint24(self, nums: List[int]) -> bool:\n",
-    "        TARGET = 24\n",
-    "        EPSILON = 1e-6\n",
-    "        ADD, MULTIPLY, SUBTRACT, DIVIDE = 0, 1, 2, 3\n",
+    "        TARGET, EPSILON, ADD, MULTIPLY, SUBTRACT, DIVIDE = 24, 1e-6, 0, 1, 2, 3\n",
     "        def solve(nums: List[float]) -> bool:\n",
     "            if not nums:\n",
     "                return False\n",
@@ -54,11 +65,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.12 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -71,7 +80,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
