--- a/py_playground/algorithm/backtrace/nqueen.ipynb
+++ b/py_playground/algorithm/backtrace/nqueen.ipynb
@@ -2,15 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Q....', '..Q..', '....Q', '.Q...', '...Q.'],\n",
+       " ['Q....', '...Q.', '.Q...', '....Q', '..Q..'],\n",
+       " ['.Q...', '...Q.', 'Q....', '..Q..', '....Q'],\n",
+       " ['.Q...', '....Q', '..Q..', 'Q....', '...Q.'],\n",
+       " ['..Q..', 'Q....', '...Q.', '.Q...', '....Q'],\n",
+       " ['..Q..', '....Q', '.Q...', '...Q.', 'Q....'],\n",
+       " ['...Q.', 'Q....', '..Q..', '....Q', '.Q...'],\n",
+       " ['...Q.', '.Q...', '....Q', '..Q..', 'Q....'],\n",
+       " ['....Q', '.Q...', '...Q.', 'Q....', '..Q..'],\n",
+       " ['....Q', '..Q..', 'Q....', '...Q.', '.Q...']]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class Nqueen:\n",
     "\n",
-    "    N = 11\n",
+    "    N = 5\n",
     "    maze = []\n",
     "    ans = []\n",
     "\n",
@@ -51,7 +71,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -65,7 +85,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
