--- a/py_playground/simulation/red_pack.ipynb
+++ b/py_playground/simulation/red_pack.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[14.81, 25.63, 33.51, 11.64, 14.41]\n"
+      "[27.86, 19.62, 17.47, 19.4, 15.65]\n"
      ]
     }
    ],
@@ -146,57 +146,59 @@
           51,
           52,
           53,
+          54,
           55,
           56,
           58
          ],
          "y": [
-          3593,
-          3423,
-          3158,
-          3065,
-          2977,
-          2823,
-          2596,
-          2570,
-          2426,
-          2316,
-          2176,
-          2081,
-          1867,
-          1618,
-          1515,
-          1396,
-          1286,
-          1186,
-          1053,
-          902,
-          859,
-          728,
-          658,
-          559,
-          506,
-          437,
-          371,
-          327,
+          3476,
+          3447,
+          3179,
+          3132,
+          2924,
+          2820,
+          2730,
+          2517,
+          2476,
+          2285,
+          2234,
+          1977,
+          1804,
+          1758,
+          1524,
+          1419,
+          1257,
+          1150,
+          995,
+          953,
+          811,
+          764,
+          661,
+          546,
+          494,
+          427,
+          375,
+          297,
           280,
-          211,
-          197,
-          185,
-          147,
-          123,
-          88,
-          75,
-          58,
+          255,
+          234,
+          181,
+          127,
+          115,
+          92,
+          67,
+          59,
           46,
-          38,
-          26,
+          31,
           23,
-          10,
-          8,
-          8,
+          22,
+          13,
+          7,
+          6,
+          4,
+          2,
           3,
-          1,
           1
          ]
         }
@@ -574,11 +576,10 @@
           ],
           "scatter": [
            {
-            "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
-             }
+            "fillpattern": {
+             "fillmode": "overlay",
+             "size": 10,
+             "solidity": 0.2
             },
             "type": "scatter"
            }
@@ -1020,7 +1021,7 @@
          }
         },
         "title": {
-         "text": "A Figure Displayed with fig"
+         "text": "红包金额分布情况"
         }
        }
       }
@@ -1038,7 +1039,7 @@
     "\n",
     "fig = go.Figure(\n",
     "    data=[go.Bar(x=x_array, y=y_array)],\n",
-    "    layout_title_text=\"A Figure Displayed with fig\"\n",
+    "    layout_title_text=\"红包金额分布情况\"\n",
     ")\n",
     "fig.show()"
    ]
@@ -1066,11 +1067,11 @@
           5
          ],
          "y": [
-          203363.02999999962,
-          197532.0399999997,
-          198181.55,
-          197527.4399999999,
-          203395.93999999922
+          201760.85000000027,
+          198331.63999999958,
+          198507.55000000042,
+          197709.14000000103,
+          203690.8199999997
          ]
         }
        ],
@@ -1447,11 +1448,10 @@
           ],
           "scatter": [
            {
-            "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
-             }
+            "fillpattern": {
+             "fillmode": "overlay",
+             "size": 10,
+             "solidity": 0.2
             },
             "type": "scatter"
            }
@@ -1893,7 +1893,7 @@
          }
         },
         "title": {
-         "text": "A 2"
+         "text": "不同位置的红包金额总和"
         }
        }
       }
@@ -1907,7 +1907,7 @@
     "y_array = list(pos.values())\n",
     "fig = go.Figure(\n",
     "    data=[go.Bar(x=x_array, y=y_array)],\n",
-    "    layout_title_text=\"A 2\"\n",
+    "    layout_title_text=\"不同位置的红包金额总和\"\n",
     ")\n",
     "fig.show()"
    ]
@@ -1922,11 +1922,9 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.9.12 64-bit",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -1939,11 +1937,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.13"
   },
   "metadata": {
    "interpreter": {
     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
